# CSC10005-Project1

./: .gitignore  BIT.cpp  BIT.h  CMakeLists.txt  QFloat.cpp  QFloat.h  QInt.cpp  QInt.h  README.md  binary.cpp  binary.h  config.h  config.sh  floating_binary.cpp  floating_binary.h  main.cpp  util.h  util.py
src/: QFloat.cpp  QFloat.h  QInt.cpp  QInt.h  binary.h  config.h  floating_binary.cpp  floating_binary.h  main.cpp  util.cpp  util.h  util.py
tests/: QFloat_answer.txt  QFloat_input.txt  QInt_answer.txt  QInt_input.txt  test.cmake
